--- a/pom.xml
+++ b/pom.xml
@@ -3,16 +3,16 @@
   <parent>
     <groupId>pt.ist</groupId>
     <artifactId>bennu-project</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
   </parent>
   <groupId>pt.ist</groupId>
   <artifactId>messaging</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>jar</packaging>
   <name>messaging</name>
   <properties>
-    <version.pt.ist.bennu.core>1.0-SNAPSHOT</version.pt.ist.bennu.core>
-    <version.pt.ist.email.dispatch>1.0-SNAPSHOT</version.pt.ist.email.dispatch>
+    <version.pt.ist.bennu.core>1.0.0</version.pt.ist.bennu.core>
+    <version.pt.ist.email.dispatch>1.0.0</version.pt.ist.email.dispatch>
   </properties>
   <dependencies>
     <dependency>
