--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>pt.ist</groupId>
     <artifactId>bennu-project</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1.0-rc1</version>
   </parent>
   <groupId>pt.ist</groupId>
   <artifactId>messaging</artifactId>
@@ -11,8 +11,8 @@
   <packaging>jar</packaging>
   <name>messaging</name>
   <properties>
-    <version.pt.ist.bennu.core>1.1-SNAPSHOT</version.pt.ist.bennu.core>
-    <version.pt.ist.email.dispatch>1.1-SNAPSHOT</version.pt.ist.email.dispatch>
+    <version.pt.ist.bennu.core>1.1.0-rc1</version.pt.ist.bennu.core>
+    <version.pt.ist.email.dispatch>1.1.0-rc1</version.pt.ist.email.dispatch>
   </properties>
   <dependencies>
     <dependency>
