--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,16 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>pt.ist</groupId>
-        <artifactId>bennu-project</artifactId>
-        <version>1.1.0</version>
+        <groupId>org.fenixedu</groupId>
+        <artifactId>fenix-framework-project</artifactId>
+        <version>1.3.0</version>
     </parent>
 
-    <groupId>pt.ist</groupId>
-    <artifactId>messaging</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-    <name>messaging</name>
+    <artifactId>messaging-system</artifactId>
+    <name>Messaging System</name>
+    <version>2.0.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <scm>
         <connection>scm:git:git@github.com:ist-dsi/messaging.git</connection>
@@ -21,22 +20,32 @@
     </scm>
 
     <properties>
-        <version.pt.ist.bennu.core>1.1.0</version.pt.ist.bennu.core>
-        <version.pt.ist.email.dispatch>1.1.0</version.pt.ist.email.dispatch>
+        <version.pt.ist.bennu>1.1.0</version.pt.ist.bennu>
+        <version.javax.mail.mail>1.4.2</version.javax.mail.mail>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>pt.ist</groupId>
             <artifactId>bennu-core</artifactId>
-            <version>${version.pt.ist.bennu.core}</version>
+            <version>${version.pt.ist.bennu}</version>
         </dependency>
         <dependency>
             <groupId>pt.ist</groupId>
-            <artifactId>email-dispatch</artifactId>
-            <version>${version.pt.ist.email.dispatch}</version>
+            <artifactId>scheduler</artifactId>
+            <version>${version.pt.ist.bennu}</version>
         </dependency>
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>javax.mail</groupId>
+                <artifactId>mail</artifactId>
+                <version>${version.javax.mail.mail}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <repositories>
         <repository>
@@ -44,4 +53,9 @@
             <url>https://fenix-ashes.ist.utl.pt/nexus/content/groups/fenix-ashes-maven-repository</url>
         </repository>
     </repositories>
+
+    <modules>
+        <module>core</module>
+        <module>email-dispatch</module>
+    </modules>
 </project>
