--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.fenixedu</groupId>
         <artifactId>fenix-framework-project</artifactId>
-        <version>1.3.0</version>
+        <version>2.0.0</version>
     </parent>
 
     <artifactId>messaging-system</artifactId>
@@ -20,25 +20,36 @@
     </scm>
 
     <properties>
-        <version.pt.ist.bennu>1.1.0</version.pt.ist.bennu>
+        <version.org.fenixedu.bennu>3.1.0</version.org.fenixedu.bennu>
+        <version.org.fenixedu.bennu-renderers>4.0.2</version.org.fenixedu.bennu-renderers>
         <version.javax.mail.mail>1.4.2</version.javax.mail.mail>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>pt.ist</groupId>
+            <groupId>org.fenixedu</groupId>
             <artifactId>bennu-core</artifactId>
-            <version>${version.pt.ist.bennu}</version>
+            <version>${version.org.fenixedu.bennu}</version>
         </dependency>
         <dependency>
-            <groupId>pt.ist</groupId>
-            <artifactId>scheduler</artifactId>
-            <version>${version.pt.ist.bennu}</version>
+            <groupId>org.fenixedu</groupId>
+            <artifactId>bennu-scheduler</artifactId>
+            <version>${version.org.fenixedu.bennu}</version>
         </dependency>
     </dependencies>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.fenixedu</groupId>
+                <artifactId>bennu-portal</artifactId>
+                <version>${version.org.fenixedu.bennu}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.fenixedu</groupId>
+                <artifactId>bennu-renderers</artifactId>
+                <version>${version.org.fenixedu.bennu-renderers}</version>
+            </dependency>
             <dependency>
                 <groupId>javax.mail</groupId>
                 <artifactId>mail</artifactId>
