--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <properties>
         <version.org.fenixedu.bennu>3.1.0</version.org.fenixedu.bennu>
-        <version.org.fenixedu.bennu-renderers>4.0.2</version.org.fenixedu.bennu-renderers>
+        <version.org.fenixedu.bennu-renderers>4.1.0-SNAPSHOT</version.org.fenixedu.bennu-renderers>
         <version.javax.mail.mail>1.4.2</version.javax.mail.mail>
     </properties>
 
