--- a/core/pom.xml
+++ b/core/pom.xml
@@ -10,21 +10,44 @@
     <artifactId>messaging</artifactId>
     <name>Messaging Core</name>
 
+    <properties>
+        <version.org.fenixedu.bennu>3.4.0</version.org.fenixedu.bennu>
+        <version.org.fenixedu.bennu-renderers>5.0.0</version.org.fenixedu.bennu-renderers>
+        <version.javax.mail.mail>1.4.2</version.javax.mail.mail>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.fenixedu</groupId>
             <artifactId>bennu-renderers</artifactId>
+			<version>${version.org.fenixedu.bennu-renderers}</version>
         </dependency>
+		<dependency>
+			<groupId>org.fenixedu</groupId>
+			<artifactId>bennu-struts</artifactId>
+			<version>${version.org.fenixedu.bennu-renderers}</version>
+		</dependency>
         <dependency>
             <groupId>org.fenixedu</groupId>
             <artifactId>bennu-portal</artifactId>
+            <version>${version.org.fenixedu.bennu}</version>
         </dependency>
+        <dependency>
+            <groupId>org.fenixedu</groupId>
+            <artifactId>bennu-scheduler</artifactId>
+            <version>${version.org.fenixedu.bennu}</version>
+        </dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>${version.javax.mail.mail}</version>
+		</dependency>
     </dependencies>
 
     <repositories>
-        <repository>
-            <id>fenix-ashes-maven-repository</id>
-            <url>https://fenix-ashes.ist.utl.pt/nexus/content/groups/fenix-ashes-maven-repository</url>
-        </repository>
+	<repository>
+		<id>fenixedu-maven-repository</id>
+		<url>https://repo.fenixedu.org/fenixedu-maven-repository</url>
+	</repository>
     </repositories>
 </project>
