--- a/pom.xml
+++ b/pom.xml
@@ -19,54 +19,16 @@
         <tag>HEAD</tag>
     </scm>
 
-    <properties>
-        <version.org.fenixedu.bennu>3.1.0</version.org.fenixedu.bennu>
-        <version.org.fenixedu.bennu-renderers>4.1.0-SNAPSHOT</version.org.fenixedu.bennu-renderers>
-        <version.javax.mail.mail>1.4.2</version.javax.mail.mail>
-    </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.fenixedu</groupId>
-            <artifactId>bennu-core</artifactId>
-            <version>${version.org.fenixedu.bennu}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.fenixedu</groupId>
-            <artifactId>bennu-scheduler</artifactId>
-            <version>${version.org.fenixedu.bennu}</version>
-        </dependency>
-    </dependencies>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.fenixedu</groupId>
-                <artifactId>bennu-portal</artifactId>
-                <version>${version.org.fenixedu.bennu}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.fenixedu</groupId>
-                <artifactId>bennu-renderers</artifactId>
-                <version>${version.org.fenixedu.bennu-renderers}</version>
-            </dependency>
-            <dependency>
-                <groupId>javax.mail</groupId>
-                <artifactId>mail</artifactId>
-                <version>${version.javax.mail.mail}</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
-    <repositories>
-        <repository>
-            <id>fenix-ashes-maven-repository</id>
-            <url>https://fenix-ashes.ist.utl.pt/nexus/content/groups/fenix-ashes-maven-repository</url>
-        </repository>
-    </repositories>
-
     <modules>
         <module>core</module>
         <module>email-dispatch</module>
     </modules>
+
+    <repositories>
+	<repository>
+		<id>fenixedu-maven-repository</id>
+		<url>https://repo.fenixedu.org/fenixedu-maven-repository</url>
+	</repository>
+    </repositories>
+
 </project>
