--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.fenixedu</groupId>
         <artifactId>messaging-system</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2.0.0-rc1</version>
     </parent>
 
     <artifactId>messaging</artifactId>
@@ -20,13 +20,13 @@
         <dependency>
             <groupId>org.fenixedu</groupId>
             <artifactId>bennu-renderers</artifactId>
-			<version>${version.org.fenixedu.bennu-renderers}</version>
+	    <version>${version.org.fenixedu.bennu-renderers}</version>
         </dependency>
-		<dependency>
-			<groupId>org.fenixedu</groupId>
-			<artifactId>bennu-struts</artifactId>
-			<version>${version.org.fenixedu.bennu-renderers}</version>
-		</dependency>
+	<dependency>
+	    <groupId>org.fenixedu</groupId>
+	    <artifactId>bennu-struts</artifactId>
+	    <version>${version.org.fenixedu.bennu-renderers}</version>
+	</dependency>
         <dependency>
             <groupId>org.fenixedu</groupId>
             <artifactId>bennu-portal</artifactId>
@@ -37,17 +37,17 @@
             <artifactId>bennu-scheduler</artifactId>
             <version>${version.org.fenixedu.bennu}</version>
         </dependency>
-		<dependency>
-			<groupId>javax.mail</groupId>
-			<artifactId>mail</artifactId>
-			<version>${version.javax.mail.mail}</version>
-		</dependency>
+	<dependency>
+	    <groupId>javax.mail</groupId>
+	    <artifactId>mail</artifactId>
+	    <version>${version.javax.mail.mail}</version>
+	</dependency>
     </dependencies>
 
     <repositories>
 	<repository>
-		<id>fenixedu-maven-repository</id>
-		<url>https://repo.fenixedu.org/fenixedu-maven-repository</url>
+	    <id>fenixedu-maven-repository</id>
+	    <url>https://repo.fenixedu.org/fenixedu-maven-repository</url>
 	</repository>
     </repositories>
 </project>
