--- a/email-dispatch/pom.xml
+++ b/email-dispatch/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.fenixedu</groupId>
         <artifactId>messaging-system</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2.0.0-rc1</version>
     </parent>
 
     <artifactId>email-dispatch</artifactId>
@@ -22,16 +22,16 @@
             <artifactId>messaging</artifactId>
             <version>${project.version}</version>
         </dependency>
-		<dependency>
-			<groupId>org.fenixedu</groupId>
-			<artifactId>bennu-struts</artifactId>
-			<version>${version.org.fenixedu.bennu-renderers}</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.mail</groupId>
-			<artifactId>mail</artifactId>
-			<version>${version.javax.mail.mail}</version>
-		</dependency>
+	<dependency>
+	    <groupId>org.fenixedu</groupId>
+	    <artifactId>bennu-struts</artifactId>
+	    <version>${version.org.fenixedu.bennu-renderers}</version>
+	</dependency>
+	<dependency>
+	    <groupId>javax.mail</groupId>
+	    <artifactId>mail</artifactId>
+	    <version>${version.javax.mail.mail}</version>
+	</dependency>
     </dependencies>
 
     <repositories>
