--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <artifactId>messaging-system</artifactId>
     <name>Messaging System</name>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0-rc1</version>
     <packaging>pom</packaging>
 
     <scm>
