Upgraded version of project to 2.2.0. Fixed formatting. Fixed apache-commons dependency.

--- a/email-dispatch/pom.xml
+++ b/email-dispatch/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -22,22 +23,22 @@
             <artifactId>messaging</artifactId>
             <version>${project.version}</version>
         </dependency>
-	<dependency>
-	    <groupId>org.fenixedu</groupId>
-	    <artifactId>bennu-struts</artifactId>
-	    <version>${version.org.fenixedu.bennu-renderers}</version>
-	</dependency>
-	<dependency>
-	    <groupId>javax.mail</groupId>
-	    <artifactId>mail</artifactId>
-	    <version>${version.javax.mail.mail}</version>
-	</dependency>
+        <dependency>
+            <groupId>org.fenixedu</groupId>
+            <artifactId>bennu-struts</artifactId>
+            <version>${version.org.fenixedu.bennu-renderers}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>${version.javax.mail.mail}</version>
+        </dependency>
     </dependencies>
 
     <repositories>
-	<repository>
-		<id>fenixedu-maven-repository</id>
-		<url>https://repo.fenixedu.org/fenixedu-maven-repository</url>
-	</repository>
+        <repository>
+            <id>fenixedu-maven-repository</id>
+            <url>https://repo.fenixedu.org/fenixedu-maven-repository</url>
+        </repository>
     </repositories>
 </project>
