--- a/core/pom.xml
+++ b/core/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -20,13 +21,13 @@
         <dependency>
             <groupId>org.fenixedu</groupId>
             <artifactId>bennu-renderers</artifactId>
-	    <version>${version.org.fenixedu.bennu-renderers}</version>
+            <version>${version.org.fenixedu.bennu-renderers}</version>
         </dependency>
-	<dependency>
-	    <groupId>org.fenixedu</groupId>
-	    <artifactId>bennu-struts</artifactId>
-	    <version>${version.org.fenixedu.bennu-renderers}</version>
-	</dependency>
+        <dependency>
+            <groupId>org.fenixedu</groupId>
+            <artifactId>bennu-struts</artifactId>
+            <version>${version.org.fenixedu.bennu-renderers}</version>
+        </dependency>
         <dependency>
             <groupId>org.fenixedu</groupId>
             <artifactId>bennu-portal</artifactId>
@@ -37,17 +38,17 @@
             <artifactId>bennu-scheduler</artifactId>
             <version>${version.org.fenixedu.bennu}</version>
         </dependency>
-	<dependency>
-	    <groupId>javax.mail</groupId>
-	    <artifactId>mail</artifactId>
-	    <version>${version.javax.mail.mail}</version>
-	</dependency>
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>${version.javax.mail.mail}</version>
+        </dependency>
     </dependencies>
 
     <repositories>
-	<repository>
-	    <id>fenixedu-maven-repository</id>
-	    <url>https://repo.fenixedu.org/fenixedu-maven-repository</url>
-	</repository>
+        <repository>
+            <id>fenixedu-maven-repository</id>
+            <url>https://repo.fenixedu.org/fenixedu-maven-repository</url>
+        </repository>
     </repositories>
 </project>
