--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.fenixedu</groupId>
         <artifactId>messaging-system</artifactId>
-        <version>2.0.0-rc1</version>
+        <version>2.0.0</version>
     </parent>
 
     <artifactId>messaging</artifactId>
