--- a/core/pom.xml
+++ b/core/pom.xml
@@ -13,6 +13,7 @@
 
     <properties>
         <version.org.fenixedu.bennu>3.4.1</version.org.fenixedu.bennu>
+        <version.org.fenixedu.bennu-spring>1.2.0</version.org.fenixedu.bennu-spring>
         <version.org.fenixedu.bennu-renderers>5.0.2</version.org.fenixedu.bennu-renderers>
         <version.javax.mail.mail>1.4.7</version.javax.mail.mail>
     </properties>
@@ -25,8 +26,8 @@
         </dependency>
         <dependency>
             <groupId>org.fenixedu</groupId>
-            <artifactId>bennu-struts</artifactId>
-            <version>${version.org.fenixedu.bennu-renderers}</version>
+            <artifactId>bennu-spring</artifactId>
+            <version>${version.org.fenixedu.bennu-spring}</version>
         </dependency>
         <dependency>
             <groupId>org.fenixedu</groupId>
