--- a/email-dispatch/pom.xml
+++ b/email-dispatch/pom.xml
@@ -4,34 +4,22 @@
 
     <parent>
         <groupId>org.fenixedu</groupId>
-        <artifactId>messaging-system</artifactId>
-        <version>2.1.0-SNAPSHOT</version>
+        <artifactId>messaging</artifactId>
+        <version>3.1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>email-dispatch</artifactId>
     <name>Email Dispatcher</name>
 
     <properties>
-        <version.org.fenixedu.bennu>4.0.0.RC2</version.org.fenixedu.bennu>
-        <version.org.fenixedu.bennu-renderers>5.0.3</version.org.fenixedu.bennu-renderers>
         <version.javax.mail.mail>1.4.7</version.javax.mail.mail>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.fenixedu</groupId>
-            <artifactId>messaging</artifactId>
+            <artifactId>messaging-core</artifactId>
             <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.fenixedu</groupId>
-            <artifactId>bennu-struts</artifactId>
-            <version>${version.org.fenixedu.bennu-renderers}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.fenixedu</groupId>
-            <artifactId>bennu-core</artifactId>
-            <version>${version.org.fenixedu.bennu}</version>
         </dependency>
         <dependency>
             <groupId>javax.mail</groupId>
