--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
         <version>2.2.0</version>
     </parent>
 
-    <artifactId>messaging-system</artifactId>
-    <name>Messaging System</name>
-    <version>2.1.0-SNAPSHOT</version>
+    <artifactId>messaging</artifactId>
+    <name>Messaging</name>
+    <version>3.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <scm>
@@ -21,8 +21,9 @@
     </scm>
 
     <modules>
-        <module>core</module>
         <module>email-dispatch</module>
+        <module>messaging-core</module>
+        <module>messaging-test</module>
     </modules>
 
     <repositories>
