--- a/core/pom.xml
+++ b/core/pom.xml
@@ -12,9 +12,9 @@
     <name>Messaging Core</name>
 
     <properties>
-        <version.org.fenixedu.bennu>3.4.1</version.org.fenixedu.bennu>
+        <version.org.fenixedu.bennu>4.0.0.RC2</version.org.fenixedu.bennu>
         <version.org.fenixedu.bennu-spring>1.2.0</version.org.fenixedu.bennu-spring>
-        <version.org.fenixedu.bennu-renderers>5.0.2</version.org.fenixedu.bennu-renderers>
+        <version.org.fenixedu.bennu-renderers>5.0.3</version.org.fenixedu.bennu-renderers>
         <version.javax.mail.mail>1.4.7</version.javax.mail.mail>
     </properties>
 
