--- a/email-dispatch/pom.xml
+++ b/email-dispatch/pom.xml
@@ -12,8 +12,8 @@
     <name>Email Dispatcher</name>
 
     <properties>
-        <version.org.fenixedu.bennu>3.4.1</version.org.fenixedu.bennu>
-        <version.org.fenixedu.bennu-renderers>5.0.2</version.org.fenixedu.bennu-renderers>
+        <version.org.fenixedu.bennu>4.0.0.RC2</version.org.fenixedu.bennu>
+        <version.org.fenixedu.bennu-renderers>5.0.3</version.org.fenixedu.bennu-renderers>
         <version.javax.mail.mail>1.4.7</version.javax.mail.mail>
     </properties>
 
