--- a/email-dispatch/pom.xml
+++ b/email-dispatch/pom.xml
@@ -29,6 +29,11 @@
             <version>${version.org.fenixedu.bennu-renderers}</version>
         </dependency>
         <dependency>
+            <groupId>org.fenixedu</groupId>
+            <artifactId>bennu-core</artifactId>
+            <version>${version.org.fenixedu.bennu}</version>
+        </dependency>
+        <dependency>
             <groupId>javax.mail</groupId>
             <artifactId>mail</artifactId>
             <version>${version.javax.mail.mail}</version>
