--- a/messaging-core/pom.xml
+++ b/messaging-core/pom.xml
@@ -14,7 +14,7 @@
     <properties>
         <version.org.fenixedu.bennu>4.0.0.RC2</version.org.fenixedu.bennu>
         <version.com.mitchellbosecke.pebble>2.2.1</version.com.mitchellbosecke.pebble>
-        <version.commons-validator.commons-validator>1.5.0</version.commons-validator.commons-validator>
+        <version.javax.mail.mail>1.4.7</version.javax.mail.mail>
     </properties>
 
     <dependencies>
@@ -39,9 +39,9 @@
             <version>${version.com.mitchellbosecke.pebble}</version>
         </dependency>
         <dependency>
-            <groupId>commons-validator</groupId>
-            <artifactId>commons-validator</artifactId>
-            <version>${version.commons-validator.commons-validator}</version>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>${version.javax.mail.mail}</version>
         </dependency>
     </dependencies>
 
