--- a/messaging-core/pom.xml
+++ b/messaging-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.fenixedu</groupId>
         <artifactId>messaging</artifactId>
-        <version>DEV-SNAPSHOT</version>
+        <version>3.2.0</version>
     </parent>
 
     <artifactId>messaging-core</artifactId>
