--- a/messaging-test/pom.xml
+++ b/messaging-test/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.fenixedu</groupId>
         <artifactId>messaging</artifactId>
-        <version>DEV-SNAPSHOT</version>
+        <version>3.2.0</version>
     </parent>
 
     <artifactId>messaging-test</artifactId>
