--- a/messaging-core/pom.xml
+++ b/messaging-core/pom.xml
@@ -14,7 +14,7 @@
     <properties>
         <version.org.fenixedu.bennu>5.0.0</version.org.fenixedu.bennu>
         <version.com.mitchellbosecke.pebble>2.4.0</version.com.mitchellbosecke.pebble>
-        <version.javax.mail.mail>1.4.7</version.javax.mail.mail>
+        <version.javax.mail.javax.mail-api>1.6.0</version.javax.mail.javax.mail-api>
     </properties>
 
     <dependencies>
@@ -40,8 +40,8 @@
         </dependency>
         <dependency>
             <groupId>javax.mail</groupId>
-            <artifactId>mail</artifactId>
-            <version>${version.javax.mail.mail}</version>
+            <artifactId>javax.mail-api</artifactId>
+            <version>${version.javax.mail.javax.mail-api}</version>
         </dependency>
     </dependencies>
 
