--- a/email-dispatch/pom.xml
+++ b/email-dispatch/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.fenixedu</groupId>
         <artifactId>messaging</artifactId>
-        <version>3.3.0-SNAPSHOT</version>
+        <version>3.2.1</version>
     </parent>
 
     <artifactId>email-dispatch</artifactId>
