--- a/messaging-core/pom.xml
+++ b/messaging-core/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.fenixedu</groupId>
         <artifactId>messaging</artifactId>
-        <version>3.7.2</version>
+        <version>3.8.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>messaging-core</artifactId>
