Add support for SMS Messaging FMSG-63 #resolve

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 
     <modules>
         <module>email-dispatch</module>
+        <module>sms-dispatch</module>
         <module>messaging-core</module>
         <module>messaging-test</module>
     </modules>
