--- a/sms-dispatch/pom.xml
+++ b/sms-dispatch/pom.xml
@@ -11,7 +11,7 @@
     <name>SMS Dispatcher</name>
 
     <properties>
-        <version.javax.mail>1.6.2</version.javax.mail>
+        <version.org.fenixedu.bennu>6.12.0</version.org.fenixedu.bennu>
         <version.pt.ist.standards>2.1.1</version.pt.ist.standards>
         <version.com.twilio.sdk.twilio-java-sdk>7.31.0</version.com.twilio.sdk.twilio-java-sdk>
     </properties>
@@ -19,8 +19,8 @@
     <dependencies>
         <dependency>
             <groupId>org.fenixedu</groupId>
-            <artifactId>messaging-core</artifactId>
-            <version>${project.version}</version>
+            <artifactId>bennu-core</artifactId>
+            <version>${version.org.fenixedu.bennu}</version>
         </dependency>
         <dependency>
             <groupId>pt.ist</groupId>
