Add phone call client to send verification codes via phone call FMSG-65 #resolve

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <modules>
         <module>email-dispatch</module>
         <module>sms-dispatch</module>
+        <module>phone-call</module>
         <module>messaging-core</module>
         <module>messaging-test</module>
     </modules>
