--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <artifactId>messaging</artifactId>
     <name>Messaging</name>
-    <version>4.4.0-SNAPSHOT</version>
+    <version>4.3.1</version>
     <packaging>pom</packaging>
 
     <scm>
